# luarite

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
assets/: test_atlas.json
crates/engine_core/: Cargo.toml
crates/engine_core/src/: hud.rs  input.rs  lib.rs  metrics.rs  offscreen.rs  present_pass_math.rs  renderer.rs  resources.rs  stable_keys.rs  state.rs  time.rs  window.rs
crates/engine_core/src/shaders/: sprite.wgsl
crates/engine_core/tests/: offscreen_render.rs  orientation_edges.rs  virtual_canvas_e2e.rs
crates/engine_scripting/: Cargo.toml
crates/engine_scripting/src/: api.rs  lib.rs  persist.rs  reload.rs  sandbox.rs
crates/engine_scripting/tests/: e2e_offscreen.rs  frame_builder.rs  integration_api.rs  integration_sandbox.rs  property_v2.proptest-regressions  property_v2.rs  typed_buffers.rs
docs/: PHASES.md
host/: Cargo.toml
host/src/: main.rs
host/tests/: flicker_guard.rs  host_like_offscreen.rs  mixed_path_precedence.rs  persistence_static_sprites.rs
scripts/: game.lua  z_order_test.lua  z_partial_overlap_test.lua  z_test.lua
