[workspace]
members = [
    "crates/engine_core",
    "crates/engine_scripting", 
    "host",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
winit = "0.30"
wgpu = "23.0"
glam = "0.29"
image = "0.25"
bytemuck = { version = "1.18", features = ["derive"] }
pollster = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }

# Development dependencies
proptest = "1.4"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1